@@ -6,19 +6,19 @@ Here is a list of the modules available in ``particles``:
 .. toctree::
    :maxdepth: 1
 
-   core
-   state_space_models
-   distributions 
-   resampling
-   smoothing
    collectors
+   core
    datasets
-   qmc
+   distributions 
    hilbert
    hmm
    kalman
-   smc_samplers
    mcmc
-   utils
    nested
+   qmc
+   resampling
+   smc_samplers
+   smoothing
+   state_space_models
+   utils
    variance_estimators
